--- a/advent_of_code_2024/advent_of_code_2024.csproj
+++ b/advent_of_code_2024/advent_of_code_2024.csproj
@@ -14,6 +14,9 @@
         <None Include="Day2\input.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Include="Day3\input.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
