--- a/advent_of_code_2024/advent_of_code_2024.csproj
+++ b/advent_of_code_2024/advent_of_code_2024.csproj
@@ -17,6 +17,10 @@
         <None Include="Day3\input.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Include="Day4\input.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+
     </ItemGroup>
 
 </Project>
