--- a/advent_of_code_2024/advent_of_code_2024.csproj
+++ b/advent_of_code_2024/advent_of_code_2024.csproj
@@ -20,6 +20,9 @@
         <None Include="Day4\input.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Include="Day5\input.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
 
     </ItemGroup>
 
