--- a/advent_of_code_2024/advent_of_code_2024.csproj
+++ b/advent_of_code_2024/advent_of_code_2024.csproj
@@ -23,6 +23,12 @@
         <None Include="Day5\input.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Day6\input.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Day6\input_test.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
 
     </ItemGroup>
 
